# fastapi-hotel-booking-app

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 40358218bd9d_initial.py
docker/: app.sh  initial_data.sh
src/: admin.py  config.py  dao.py  database.py  exceptions.py  initial_data.py  lifespan.py  main.py
src/auth/: dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/bookings/: dao.py  models.py  router.py  schemas.py  service.py
src/rooms/: dao.py  models.py  router.py  schemas.py  service.py
src/users/: dao.py  models.py  router.py  schemas.py  service.py
